# surf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .swift-format  CMakeLists.txt  README.md
Surf/: AppDelegate.h  AppDelegate.m  Document.h  Document.m  Info.plist  ViewController.m  WaveformDocument.m
Surf.xcodeproj/: project.pbxproj
Surf/Base.lproj/: Main.storyboard
Surf/Surf/: AppDelegate.swift  Document.swift  ViewController.swift
Surf/Surf.xcodeproj/: project.pbxproj
Surf/Surf.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Surf/Surf/Base.lproj/: Main.storyboard
doc/: misc-notes.txt  surf-trace-format.md  varbit-layout.numbers  vcd-grammar.abnf  vcd.ebnf
doc/img/: build-icon.sh  icon.afdesign  waveform-file-icon.afdesign
libsurf/: CMakeLists.txt
libsurf/include/surf/: common-internal.h  common.h  mmap.h  render.h  surf-file.h  surf.h  time.h  trace.h  varbit.h  vcd.h
libsurf/lib/: CMakeLists.txt  common-internal.h  config.cpp  dump_types.cpp  lexy_user_config.hpp  mmap.cpp  render.cpp  time.cpp  trace.cpp  utils.cpp  utils.h  varbit.cpp  vcd-lexer.h  vcd-lexer.re  vcd-parser.cpp  vcd-parser.h  vcd.cpp
libsurf/test/: CMakeLists.txt  bin2str.cpp  dump-struct.cpp
libsurf/tools/: CMakeLists.txt  surf-tool.cpp
libsurf/unit-tests/: CMakeLists.txt  varbit.cpp
old/surf-v1-objc/Surf/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  WaveformDocument.h  WaveformDocument.m  main.m
old/surf-v1-objc/Surf.xcodeproj/xcuserdata/jevin.xcuserdatad/xcschemes/: xcschememanagement.plist
old/surf-v1-objc/Surf/Base.lproj/: Main.storyboard
test/vcd/: parse-test.vcd  sim.vcd
